We're getting there

--- a/Virial/Makefile
+++ b/Virial/Makefile
@@ -1,7 +1,16 @@
 CC = g++
 CFLAGS = -Iinclude -std=c++11 -Wall
-SRCS = main.cpp src/graph.cpp
-TARGET = main
+
+# Automatically collect all .cpp files in src folder
+SRC_FILES = $(wildcard src/*.cpp)
+
+# For the main target, compile main.cpp plus all files from src
+SRCS = main.cpp $(SRC_FILES)
+TARGET = main.exe
+
+# For the test target, compile tests.cpp plus all files from src
+TEST_SRC = tests.cpp $(SRC_FILES)
+TEST_TARGET = tests.exe
 
 all: $(TARGET)
 
@@ -11,5 +20,17 @@ $(TARGET): $(SRCS)
 run: $(TARGET)
 	./$(TARGET)
 
+test: $(TEST_TARGET)
+	./$(TEST_TARGET)
+
+$(TEST_TARGET): $(TEST_SRC)
+	$(CC) $(CFLAGS) $(TEST_SRC) -o $(TEST_TARGET)
+
+ifeq ($(OS),Windows_NT)
+RM = del /F
+else
+RM = rm -f
+endif
+
 clean:
-	rm -f $(TARGET)
+	$(RM) *.exe
