Adding parallel Monte Carlo on GPU, giving error rn

--- a/Virial/Makefile
+++ b/Virial/Makefile
@@ -1,48 +1,34 @@
+# Compiler and flags for C++.
 CC = g++
 CFLAGS = -Iinclude -std=c++17 -Wall -Wextra -Wpedantic
 
-SRC_FILES = $(wildcard src/*.cpp)
+# Compiler and flags for CUDA.
+NVCC = nvcc
+NVCCFLAGS = -std=c++17 -O3
 
+# Source files.
+SRC_FILES = $(wildcard src/*.cpp)
+CUDA_SRC = src/parallelMonteCarlo.cu
+
+# Targets.
 SRCS = main.cpp $(SRC_FILES)
 TARGET = main.exe
 
-TEST_SRC = tests.cpp $(SRC_FILES)
-TEST_TARGET = tests.exe
+# Object file for the CUDA source.
+CUDA_OBJ = parallelMonteCarlo.o
 
 all: $(TARGET)
 
-$(TARGET): $(SRCS)
-	$(CC) $(CFLAGS) $(SRCS) -o $(TARGET)
+# Compile CUDA source.
+$(CUDA_OBJ): $(CUDA_SRC)
+	$(NVCC) $(NVCCFLAGS) -c $(CUDA_SRC) -o $(CUDA_OBJ)
+
+# Link final executable.
+$(TARGET): $(SRCS) $(CUDA_OBJ)
+	$(CC) $(CFLAGS) $(SRCS) $(CUDA_OBJ) -o $(TARGET) -L/usr/local/cuda/lib64 -lcudart
 
 run: $(TARGET)
 	./$(TARGET)
 
-test: $(TEST_TARGET)
-	./$(TEST_TARGET)
-
-runtest:
-ifndef TEST
-	$(error Please specify a test file with TEST=<filename> (without .cpp extension))
-endif
-	$(CC) $(CFLAGS) tests/$(TEST).cpp $(SRC_FILES) -o $(TEST).exe
-	./$(TEST).exe
-	$(RM) $(TEST).exe
-
-$(TEST_TARGET): $(TEST_SRC)
-	$(CC) $(CFLAGS) $(TEST_SRC) -o $(TEST_TARGET)
-
-runsim:
-ifndef SIM
-	$(error Please specify a simulation name with SIM=<name> for runsim)
-endif
-	$(CC) $(CFLAGS) $(SIM)Simulation.cpp $(SRC_FILES) -o $(SIM)Simulation.exe
-	./$(SIM)Simulation.exe
-
-ifeq ($(findstring bash,$(SHELL)),bash)
-RM = rm -f
-else
-RM = rm /F
-endif
-
 clean:
-	$(RM) *.exe
+	rm -f *.exe $(CUDA_OBJ)
